laradock-kubernetes-service.yaml
{
  "kind": "Service",
  "apiVersion": "v1",
  "metadata": {
    "name": "laradock-kubernetes-service",
    "namespace": "default"
  },
  "spec": {
    "ports": [
      {
        "name": "laradock-kubernetes",
        "protocol": "TCP",
        "port": 80,
        "targetPort": 80
      }
    ],
    "selector": {
      "app.kubernetes.io/instance": "laradock-kubernetes",
      "app.kubernetes.io/name": "laradock-kubernetes"
    },
    "type": "ClusterIP",
    "sessionAffinity": "None"
  }

}
